Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v5-enquiry/confirm-address.html
+++ b/app/views/v5-enquiry/confirm-address.html
@@ -26,11 +26,9 @@ Check your address is correct
       <form action="address-contact" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">Is your address correct?</h1>
+        <h1 class="nhsuk-heading-l">Is this your address?</h1>
         
-    <p>
-      We'll send you a letter ............
-    </p>
+    
         <dl class="nhsuk-summary-list">
 
         
