--- a/app/views/v5-enquiry/did-you-have-an-exemption.html
+++ b/app/views/v5-enquiry/did-you-have-an-exemption.html
@@ -96,8 +96,11 @@
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
-    </button>
+    </button></form>
+    <p><a href="respond-to-your-letter">Cancel</a></p>
     </div>
+
+    
 
         
    
