--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -43,7 +43,7 @@
       <p>Type of proof we need to see</p>
       <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a free NHS prescription.</p>
       <p>Select the reason you were entitled to help with your health costs to see what you need to send:</p>
-      <p>You were getting a benefit that entitles you to help</p>
+      <h3>You were getting a benefit that entitles you to help</h3>
       <details class="nhsuk-details">
         <summary class="nhsuk-details__summary">
           <span class="nhsuk-details__summary-text">
@@ -87,7 +87,7 @@
       </details>
 
 
-      
+      <h3>You had a valid exemption certificate or a Prescription Prepayment Certificate</h3>
       <p>You are entitled to free NHS prescriptions if you have a valid:</p>
       <ul>
         <li>medical exemption certificate</li>
@@ -98,7 +98,7 @@
       </ul>
       <p>Send a clear image of your certificate.</p>
       <p>This could either be a paper certificate you were sent by post or a digital certificate you were sent by email.</p>
-      <h2>How to send your proof</h2>
+      <h3>How to send your proof</h3>
       <p>You can send your proof by email or post.</p>
 
       <h3>Sending by email</h3>
