--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -92,6 +92,40 @@ NHS.UK prototype kit
 
           </tbody>
         </table>
+
+        <h3>Done pages</h3>
+
+
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">What is the best way for us to contact you</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/best-way-to-contact">We will review. how can we contact you?</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          
+        </table>
+
+        
       </div>
     </details>
 
@@ -154,6 +188,49 @@ NHS.UK prototype kit
             </tr>
 
           </tbody>
+        </table>
+
+
+        <h3>Done pages</h3>
+
+
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Exemption found - details match & valid - IF NHSBSA Exemption</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/confirmation-page">Done. Confirmation page</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Exemption found - details match & valid - DWP</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/confirmation-page-dwp">Done. Confirmation page with UC info on</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          
         </table>
       </div>
     </details>
