--- a/app/views/v5-enquiry/check-details-2.html
+++ b/app/views/v5-enquiry/check-details-2.html
@@ -66,7 +66,7 @@
 
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
-            How should we contact you
+            How we'll contact you
           </dt>
           <dd class="nhsuk-summary-list__value">
             Email and Telephone
