--- a/app/views/v5-enquiry/check-personal-details-dwp.html
+++ b/app/views/v5-enquiry/check-personal-details-dwp.html
@@ -43,12 +43,24 @@
       <form action="confirmation-page-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">Check your personal details are correct</h1>
-        <div class="nhsuk-inset-text">
+        <h1 class="nhsuk-heading-l">Check that your details on the prescription are correct</h1>
+        
+        
+        
+        
+        <!-- <div class="nhsuk-inset-text">
           <span class="nhsuk-u-visually-hidden">Information: </span>
           <p>These are the personal details we currently hold for you. </p>
           <p>If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
+        </div> -->
+
+        <div class="nhsuk-hint" id="contact-hint">
+          We took these details from your prescription form.<br><br>
+They should match what was shown on your exemption or prepayment certificate, or on your benefit award.
         </div>
+        
+
+        
         <dl class="nhsuk-summary-list">
 
           <div class="nhsuk-summary-list__row">
@@ -61,7 +73,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-name-dwp">
+              <a href="update-name">
                 Change<span class="nhsuk-u-visually-hidden"> name</span>
               </a>
         
@@ -79,7 +91,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-dob-dwp">
+              <a href="update-dob">
                 Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
               </a>
         
@@ -97,7 +109,7 @@
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-address-dwp">
+              <a href="update-address">
                 Change<span class="nhsuk-u-visually-hidden"> address</span>
               </a>
         
@@ -119,14 +131,42 @@
           </fieldset>
         
         </div>
+
+
+        <form>
+
+          <div class="nhsuk-form-group">
+        
+            <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
+              
+        
+             
+              <div class="nhsuk-checkboxes">
+        
+                
+        
+                <div class="nhsuk-checkboxes__item">
+                  <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message" required>
+                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
+                   <strong> I confirm all my personal details are correct</strong>
+                  </label>
+                </div>
+        
+              </div>
+            </fieldset>
+        
+          </div>
+        
+        
+       <br>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
-    </button>
+    </button></form>
     </div>
 
         
-   
+    <p><a href="respond-to-your-letter">Cancel</a></p>
 
     </div>
   </div>
