--- a/app/views/v5-enquiry/check-personal-details.html
+++ b/app/views/v5-enquiry/check-personal-details.html
@@ -124,13 +124,40 @@
           </fieldset>
         
         </div>
+
+
+        <form>
+
+          <div class="nhsuk-form-group">
+        
+            <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
+              
+        
+             
+              <div class="nhsuk-checkboxes">
+        
+                
+        
+                <div class="nhsuk-checkboxes__item">
+                  <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message" required>
+                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
+                   <strong> I confirm all my personal details are correct</strong>
+                  </label>
+                </div>
+        
+              </div>
+            </fieldset>
+        
+          </div>
+        
+         <br>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
     </button>
-    </div>
+    </div></form>
 
-        
+    <p><a href="respond-to-your-letter">Cancel</a></p>
    
 
     </div>
