--- a/app/views/v5-enquiry/check-phone-details.html
+++ b/app/views/v5-enquiry/check-phone-details.html
@@ -56,7 +56,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              How should we contact you
+              How we'll contact you
             </dt>
             <dd class="nhsuk-summary-list__value">
               Telephone
