--- a/app/views/v5-enquiry/exemption-certificate-number-2-screens.html
+++ b/app/views/v5-enquiry/exemption-certificate-number-2-screens.html
@@ -38,57 +38,53 @@
   </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">We'll review your case and get back to you. What is the best way for us to contact you?</h1>
 
-      <form action="contact-method" method="post" class="form">
+      <form action="cert-number" method="get" class="form">
 
+        <span class="nhsuk-caption-l">Confirm your entitlement</span>
+        <h1>Do you know your [Benefit] number?</h1>
         <div class="nhsuk-form-group">
-
-          <fieldset class="nhsuk-fieldset">
-          
-            <div class="nhsuk-hint" id="symptoms-hint">
-              Select all options that are relevant to you
+          <label class="nhsuk-label" for="one-half">
+            <div class="nhsuk-hint" id="example-with-hint-text-hint">
+              You don't have to tell us your certificate number, but telling us can helps us find your certificate. You can find the number on the certificate.
             </div>
-      
-            <div class="nhsuk-checkboxes">
-      
-              <div class="nhsuk-checkboxes__item">
-                <input class="nhsuk-checkboxes__input" id="symptoms-1" name="contact" type="checkbox" value="email" data-checkbox-exclusive-group="symptoms-list">
-                <label class="nhsuk-label nhsuk-checkboxes__label" for="symptoms-1">
-                  Email
+          </label>
+          <div class="nhsuk-radios nhsuk-radios--conditional">
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="cert-number" name="number" type="radio" value="yes">
+                <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                    Yes
                 </label>
+            </div>
+
+            <div class="nhsuk-radios__conditional nhsuk-radios__conditional--hidden" id="conditional-contact-1">
+
+              <div class="nhsuk-form-group">
+                <label class="nhsuk-label" for="email">
+                  [Benefit] number
+                </label>
+                <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber" type="text">
               </div>
       
-              <div class="nhsuk-checkboxes__item">
-                <input class="nhsuk-checkboxes__input" id="symptoms-2" name="contact" type="checkbox" value="phone" data-checkbox-exclusive-group="symptoms-list">
-                <label class="nhsuk-label nhsuk-checkboxes__label" for="symptoms-2">
-                  Telephone
-                </label>
-              </div>
-      
+            </div>
+
+
+
             
-      
-              
-      
-              <div class="nhsuk-checkboxes__item">
-                <input class="nhsuk-checkboxes__input" id="symptoms-5" name="contact" type="checkbox" value="post" data-checkbox-exclusive data-checkbox-exclusive-group="symptoms-list">
-                <label class="nhsuk-label nhsuk-checkboxes__label" for="symptoms-5">
-                  Post
+            <div class="nhsuk-radios__item">
+                <input class="nhsuk-radios__input" id="cert-number" name="number" type="radio" value="no">
+                <label class="nhsuk-label nhsuk-radios__label" for="no">
+                    No
                 </label>
-              </div>
-      
             </div>
-          </fieldset>
-          
-        
         </div>
-        <button class="nhsuk-button" type="submit">
+        </fieldset>
+      
+      </div>
+        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
-         </button>
+        </button>
        </form>
-
-       <p><a href="respond-to-your-letter">Cancel</a></p>
 
     </div>
   </div>
