--- a/app/views/v5-enquiry/reviewing-case.html
+++ b/app/views/v5-enquiry/reviewing-case.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-An exemption has been found
+We are now reviewing your case
 {% endblock %}
 
 {% block content %}
@@ -30,7 +30,7 @@ An exemption has been found
       </div>
 
       <p>No additional charges will be added during this time.</p>
-      <p></p>
+      <p>You do not need to do anything until we contact you.</p>
 
 
       <div class="nhsuk-inset-text">
@@ -41,18 +41,7 @@ An exemption has been found
       
       <p><a href="">Print this page</a></p>
       
-      <h2>How to avoid a future enquiry letter</h2>
-      <p>We match exemptions using a combination of your:</p>
-      <ul>
-        <li>name</li>
-        <li>address</li>
-        <li>date of birth</li>
-        <li>NHS number</li>
-      </ul> 
-        <p>Make sure these are correct at your GP surgery, dental practice, and any benefits organisations.</p>
-     <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
-        
-        <p> <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">Check if you are currently entitled to help with your health costs.</a></p>
+      
        
 <h3>Feedback</h3>
 <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
