--- a/app/views/v5-enquiry/were-you-claiming-any-benefits.html
+++ b/app/views/v5-enquiry/were-you-claiming-any-benefits.html
@@ -100,6 +100,7 @@
         <button class="nhsuk-button" type="submit">
           Continue
         </button>
+        <p><a href="respond-to-your-letter">Cancel</a></p>
       </div>
 
     </form>
