Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v5-enquiry/adhoc-screens/call-us-about-your-pcn.html
+++ b/app/views/v5-enquiry/adhoc-screens/call-us-about-your-pcn.html
@@ -31,9 +31,9 @@
        You cannot use this service yet
       </h1>
     
-      <p>As you have not received a Penalty Charge Notice letter, you cannot use this service yet.</p>
+      <p>As you have not received a Penalty Charge Notice, you cannot use this service yet.</p>
      
-      <p>Try again when you receive your Penalty Charge Notice letter.</p>
+      <p>Try again when you receive your Penalty Charge Notice.</p>
       <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries</a>.</p>
       
       
