Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v5-enquiry/check-personal-details.html
+++ b/app/views/v5-enquiry/check-personal-details.html
@@ -48,10 +48,9 @@
         
         
         
-        <div class="nhsuk-inset-text">
-          <span class="nhsuk-u-visually-hidden">Information: </span>
-          <p>These are the personal details we currently hold for you. </p>
-          <p>If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
+        <div class="nhsuk-hint" id="contact-hint">
+          We took these details from your prescription form.<br><br>
+They should match what was shown on your exemption or prepayment certificate, or on your benefit award.
         </div>
         
         <dl class="nhsuk-summary-list">
