--- a/app/views/v5-enquiry/confirmation-page.html
+++ b/app/views/v5-enquiry/confirmation-page.html
@@ -12,7 +12,7 @@ An exemption has been found
 
 
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>An exemption has been confirmed</h1>
+        <h1>An exemption has been found</h1>
       <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
         <div class="nhsuk-card__content">
           <h2 class="nhsuk-card__heading" style="text-align: center; color: white;">
