--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -230,6 +230,17 @@ NHS.UK prototype kit
 
           </tbody>
 
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Cannot find your details</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/we-need-proof">We cannot find your details</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
           
         </table>
       </div>
@@ -307,8 +318,29 @@ NHS.UK prototype kit
           </thead>
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell"></td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/"></a></td>
+              <td class="nhsuk-table__cell">Date of birth field error</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/error-messages/date-of-birth-error">DOB</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Text field error</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/error-messages/text-field-error">Text field</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Radio button error</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/error-messages/radio-error">Radio button</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
