--- a/app/views/v5-enquiry/cannot-confirm.html
+++ b/app/views/v5-enquiry/cannot-confirm.html
@@ -56,13 +56,10 @@
 
 
         <h2>What to do next</h2>
-        <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment
-            Certificate between 18 November 2019 and 30 November 2019.</p>
+        <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment Certificate between 18 November 2019 and 30 November 2019.</p>
         <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
-        <p>If you do not send us proof, or we cannot find your exemption, you will be sent a Penalty Charge Notice. This
-            will include information on how and when to pay your penalty charge.</p>
-        <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you
-            can ask us to review your enquiry letter. <a href="who-can-ask-for-review">Find out if you can ask for a
+        <p>If you do not send us proof, or we cannot find your exemption, you will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
+        <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review">Find out if you can ask for a
                 review</a>.</p>
         <p><a href="">Print this page</a></p>
         <h3>Feedback</h3>
