--- a/app/views/v5-enquiry/check-details-2.html
+++ b/app/views/v5-enquiry/check-details-2.html
@@ -60,7 +60,23 @@
       <dl class="nhsuk-summary-list">
 
         
-
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            [Benefit] number
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            1234567890
+          </dd>
+      
+          <dd class="nhsuk-summary-list__actions">
+      
+            <a href="change-exemption-number-2">
+              Change<span class="nhsuk-u-visually-hidden"> name</span>
+            </a>
+      
+          </dd>
+      
+        </div>
         
 
 
