--- a/app/views/v5-enquiry/check-email-details.html
+++ b/app/views/v5-enquiry/check-email-details.html
@@ -53,6 +53,24 @@
         <dl class="nhsuk-summary-list">
 
 
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              [Benefit] number
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              1234567890
+            </dd>
+        
+            <dd class="nhsuk-summary-list__actions">
+        
+              <a href="change-exemption-number">
+                Change<span class="nhsuk-u-visually-hidden"> name</span>
+              </a>
+        
+            </dd>
+        
+          </div>
+
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
@@ -112,7 +130,7 @@
      Continue
     </button>
 
-    <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
+    <p class="navigation"><a class="cancel" href="respond-to-your-letter">Cancel</a></p>
     </div>
 
         
