--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -40,7 +40,7 @@
       </h1>
     
 
-      <p>Type of proof we need to see</p>
+      <h2>Type of proof we need to see</h2>
       <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a free NHS prescription.</p>
       <p>Select the reason you were entitled to help with your health costs to see what you need to send:</p>
       <h3>You were getting a benefit that entitles you to help</h3>
@@ -101,7 +101,7 @@
       <h3>How to send your proof</h3>
       <p>You can send your proof by email or post.</p>
 
-      <h3>Sending by email</h3>
+      <h4>Sending by email</h4>
       <p>Take a photo, scan or screenshot of your proof. If you're taking a photo, use a mobile phone or digital camera.</p>
       <p>Check the image is clear and you can read the information, then send it as an email attachment to: <a href="">nhsbsa.pecs@nhsbsa.nhs.uk</a></p>
       <p>You must include your:</p>
@@ -112,7 +112,7 @@
         <li>address including postcode</li>
       </ul>
       <p>Once we receive your email, we will check your proof and contact you within 2 working days.</p>
-      <h3>Sending by post</h3>
+      <h4>Sending by post</h4>
       <p>Send a photocopy of your proof to us and include your:</p>
       <ul>
         <li>reference number 11193492846</li>
