Baseline enquiry letter journey finished

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -54,7 +54,7 @@ NHS.UK prototype kit
       BOTH
     </strong>
     <hr>
-
+<!-- 
     <details class="nhsuk-details nhsuk-expander">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
@@ -121,13 +121,34 @@ NHS.UK prototype kit
             </tr>
 
           </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Case closed - Deceased</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/deceased">The case has been closed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We cannot find your details</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm">We cannot confirm you were entitled</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                PECS
+              </strong></td>
+            </tr>
+
+          </tbody>
 
           
         </table>
 
         
       </div>
-    </details>
+    </details> -->
 
 
 
@@ -188,6 +209,17 @@ NHS.UK prototype kit
             </tr>
 
           </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">More information needed</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt
+                  failed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
         </table>
 
 
@@ -232,11 +264,53 @@ NHS.UK prototype kit
 
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell">Cannot find your details</td>
+              <td class="nhsuk-table__cell">1st and 2nd attempt - cannot match details</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/we-need-proof">We cannot find your details</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">What is the best way for us to contact you</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/best-way-to-contact">We will review. how can we contact you?</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Case closed - Deceased</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/deceased">The case has been closed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We cannot find your details</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm">We cannot confirm you were entitled</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                PECS
+              </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We cannot find your details</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm-decs">We cannot confirm you were entitled</a></td>
+              <td class="nhsuk-table__cell"></strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
             </tr>
 
           </tbody>
@@ -277,17 +351,93 @@ NHS.UK prototype kit
               </th>
             </tr>
           </thead>
+          
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell">Call us about your PCN letter</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/call-us-about-your-pcn">User
-                  enters PCN reference number before receiving letter</a></td>
+              <td class="nhsuk-table__cell">More information needed</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/cannot-confirm-3rd">3rd attempt
+                  failed</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
             </tr>
 
           </tbody>
+        </table>
+
+        <h3>Done pages</h3>
+
+
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Exemption found - details match & valid - IF NHSBSA Exemption</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/confirmation-page">Done. Confirmation page</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Exemption found - details match & valid - DWP</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/confirmation-page-dwp">Done. Confirmation page with UC info on</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">1st and 2nd attempt - cannot match details</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/we-need-proof">We cannot find your details</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">What is the best way for us to contact you</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/best-way-to-contact">We will review. how can we contact you?</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Case closed - Deceased</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/deceased">The case has been closed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          
+
+          
         </table>
       </div>
     </details>
