--- a/app/views/v5-enquiry/update-dob-dwp.html
+++ b/app/views/v5-enquiry/update-dob-dwp.html
@@ -50,7 +50,7 @@
     <form action="check-personal-details-dwp" method="post" class="form">
 
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1>What is your date of birth?</h1>
+      <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
       <div class="nhsuk-hint" id="example-hint">
         For example, 31 3 1980
       </div>
@@ -88,6 +88,7 @@
           <button class="nhsuk-button" type="submit">
             Continue
           </button>
+          <p class="navigation"><a class="cancel" href="respond-to-your-letter">Cancel</a></p>
         </div>
 
 
