--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -5,17 +5,21 @@
 {% block pageTitle %}
 <header class="nhsuk-header nhsuk-header--transactional" role="banner">
   <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
+    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/"
+        aria-label="NHS homepage">
 
         <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
           <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
+          <path class="nhsuk-logo__text" fill="#fff"
+            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6">
+          </path>
         </svg>
 
       </a>
     </div>
     <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
+      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your
+        letter</a>
     </div>
 
   </div>
@@ -26,118 +30,162 @@
 {% block content %}
 
 <div class="nhsuk-back-link">
-<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-  <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-    <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-  </svg>
-  Go back</a>
+  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+      aria-hidden="true" height="24" width="24">
+      <path
+        d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z">
+      </path>
+    </svg>
+    Go back</a>
 </div>
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-      <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1 class="nhsuk-heading-l">
-        We need proof that you were entitled to claim free NHS prescriptions between 02 September 2022 and 30 September 2022
-      </h1>
-    
-
-      <h2>Type of proof we need to see</h2>
-      <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a free NHS prescription.</p>
-      <p>Select the reason you were entitled to help with your health costs to see what you need to send:</p>
-      <h3>You were getting a benefit that entitles you to help</h3>
-      <details class="nhsuk-details">
-        <summary class="nhsuk-details__summary">
-          <span class="nhsuk-details__summary-text">
-            Income-based Jobseeker's Allowance (JSA)
-          </span>
-        </summary>
-        <div class="nhsuk-details__text">
-          <p>A clear image of every page of your JSA award letter. The image needs to show that your JSA was income-based.</p>
-          <p>Income Support or income-related Employment and Support Allowance (ESA)</p>
-          <p>A clear image of every page of your Income Support or ESA award letter.</p>
-          <p>If you’re sending an image of your ESA award letter it needs to show that you receive income-related ESA.</p>
-        </div>
-      </details>
-      <details class="nhsuk-details">
-        <summary class="nhsuk-details__summary">
-          <span class="nhsuk-details__summary-text">
-            Pension Credit Guarantee Credit
-          </span>
-        </summary>
-        <div class="nhsuk-details__text">
-          <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
-        </div>
-      </details>
-      <details class="nhsuk-details">
-        <summary class="nhsuk-details__summary">
-          <span class="nhsuk-details__summary-text">
-            Universal Credit
-        </summary>
-        <div class="nhsuk-details__text">
-          <p>A clear image of every page of your Universal Credit letter or statement.</p>
-          <p>Your Universal Credit exemption must have been valid at the time you claimed a free prescription.</p>
-          <p>You are entitled to claim free NHS prescriptions if your earnings during your most recent assessment period were:</p>
-          <ul>
-            <li>£435 or less</li>
-            <li>£935 or less if your Universal Credit includes a payment for a child or you have limited capability for work or work-related activity</li>
-          </ul>
-         <p>'Most recent assessment period' means the assessment period that ended immediately before the date you claimed free NHS prescriptions. It runs for a calendar month.</p>
-         <p>If you claim Universal Credit as a couple, the earnings limit applies to the joint income of you and your partner.</p>
-
-        </div>
-      </details>
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
+    <span class="nhsuk-caption-l">Confirm your entitlement</span>
+    <h1 class="nhsuk-heading-l">
+      We need proof that you were entitled to claim free NHS prescriptions between 02 September 2022 and 30 September
+      2022
+    </h1>
 
 
-      <h3>You had a valid exemption certificate or a Prescription Prepayment Certificate</h3>
-      <p>You are entitled to free NHS prescriptions if you have a valid:</p>
-      <ul>
-        <li>medical exemption certificate</li>
-        <li>maternity exemption certificate</li>
-        <li>HC2 certificate</li>
-        <li>NHS Tax Credit Exemption Certificate</li>
-        <li>Prescription Prepayment Certificate</li>
-      </ul>
-      <p>Send a clear image of your certificate.</p>
-      <p>This could either be a paper certificate you were sent by post or a digital certificate you were sent by email.</p>
-      <h3>How to send your proof</h3>
-      <p>You can send your proof by email or post.</p>
+    <h2>Type of proof we need to see</h2>
+    <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a
+      free NHS prescription.</p>
 
-      <h4>Sending by email</h4>
-      <p>Take a photo, scan or screenshot of your proof. If you're taking a photo, use a mobile phone or digital camera.</p>
-      <p>Check the image is clear and you can read the information, then send it as an email attachment to: <a href="">nhsbsa.pecs@nhsbsa.nhs.uk</a></p>
-      <p>You must include your:</p>
-      <ul>
-        <li>reference number 11193492846</li>
-        <li>full name</li>
-        <li>date of birth</li>
-        <li>address including postcode</li>
-      </ul>
-      <p>Once we receive your email, we will check your proof and contact you within 2 working days.</p>
-      <h4>Sending by post</h4>
-      <p>Send a photocopy of your proof to us and include your:</p>
-      <ul>
-        <li>reference number 11193492846</li>
-        <li>full name</li>
-        <li>date of birth</li>
-        <li>address including postcode</li>
-      </ul>
-      <p>Send the copy of your proof to:</p>
-      
-      <p>Prescription Exemption Checking Team</br></p>
-      <p>NHSBSA</br></p>
-      <p>Bridge House</br></p>
-      <p>152 Pilgrim Street</br></p>
-      <p>Newcastle Upon Tyne</br></p>
-      <p>NE1 6SN</br></p>
 
-      <p>Once we receive your proof by post, we will check it and contact you within 5 working days.</p>
-      <h3>Feedback</h3>
-      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-      <p><a href="">Leave feedback</a></p>
-           
+    <p>Select the reason you were entitled to help with your health costs to see what you need to send:</p>
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You were getting Income-based Jobseeker's Allowance (JSA)
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>A clear image of every page of your JSA award letter. The image needs to show that your JSA was income-based.
+        </p>
+
+      </div>
+    </details>
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You were getting Income Support or income-related Employment and Support Allowance (ESA)
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+
+        <p>A clear image of every page of your Income Support or ESA award letter.</p>
+        <p>If you're sending an image of your ESA award letter it needs to show that you receive income-related ESA.</p>
+      </div>
+    </details>
+
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You were named on your partner's Pension Credit Guarantee Credit
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
+      </div>
+    </details>
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You were getting Universal Credit
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>A clear image of every page of your Universal Credit letter or statement.</p>
+        <p>Your Universal Credit exemption must have been valid at the time you claimed a free prescription.</p>
+        <p>You are entitled to claim free NHS prescriptions if your earnings during your most recent assessment period
+          were:</p>
+        <ul>
+          <li>£435 or less</li>
+          <li>£935 or less if your Universal Credit includes a payment for a child or you have limited capability for
+            work or work-related activity</li>
+        </ul>
+        <p>'Most recent assessment period' means the assessment period that ended immediately before the date you
+          claimed free NHS prescriptions. It runs for a calendar month.</p>
+        <p>If you claim Universal Credit as a couple, the earnings limit applies to the joint income of you and your
+          partner.</p>
+
+      </div>
+    </details>
+
+
+
+
+    <details class="nhsuk-details">
+      <summary class="nhsuk-details__summary">
+        <span class="nhsuk-details__summary-text">
+          You had a valid exemption certificate or a Prescription Prepayment Certificate
+        </span>
+      </summary>
+      <div class="nhsuk-details__text">
+        <p>Send a clear image of your certificate.</p>
+        <p>This could either be a paper certificate you were sent by post or a digital certificate you were sent by
+          email.
+        </p>
+        <p>You are entitled to free NHS prescriptions if you have a valid:</p>
+        <ul>
+          <li>medical exemption certificate</li>
+          <li>maternity exemption certificate</li>
+          <li>HC2 certificate</li>
+          <li>NHS Tax Credit Exemption Certificate</li>
+          <li>Prescription Prepayment Certificate</li>
+        </ul>
+      </div>
+    </details>
+
+
+
+    <h2>How to send your proof</h2>
+    <p>You can send your proof by email or post.</p>
+
+    <h3>Sending by email</h3>
+    <p>Take a photo, scan or screenshot of your proof. If you're taking a photo, use a mobile phone or digital camera.
+    </p>
+    <p>Check the image is clear and you can read the information, then send it as an email attachment to: <a
+        href="">nhsbsa.pecs@nhsbsa.nhs.uk</a></p>
+    <p>You must include your:</p>
+    <ul>
+      <li>reference number 11193492846</li>
+      <li>full name</li>
+      <li>date of birth</li>
+      <li>address including postcode</li>
+    </ul>
+    <p>Once we receive your email, we will check your proof and contact you within 2 working days.</p>
+    <h3>Sending by post</h3>
+    <p>Send a photocopy of your proof to us and include your:</p>
+    <ul>
+      <li>reference number 11193492846</li>
+      <li>full name</li>
+      <li>date of birth</li>
+      <li>address including postcode</li>
+    </ul>
+    <p>Send the copy of your proof to:</p>
+
+    <div class="nhsuk-inset-text">
+      <span class="nhsuk-u-visually-hidden">Information: </span>
+      <p>Prescription Exemption Checking Team</br>
+        NHSBSA</br>
+        Bridge House</br>
+        152 Pilgrim Street</br>
+        Newcastle Upon Tyne</br>
+        NE1 6SN</p>
     </div>
-  </div>
 
-  <style>
-  
-  </style>
+
+
+    <p>Once we receive your proof by post, we will check it and contact you within 5 working days.</p>
+    <h3>Feedback</h3>
+    <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
+    <p><a href="">Leave feedback</a></p>
+
+  </div>
+</div>
+
+<style>
+
+</style>
 {% endblock %}
