--- a/app/views/v5-enquiry/check-personal-details-dwp.html
+++ b/app/views/v5-enquiry/check-personal-details-dwp.html
@@ -148,7 +148,7 @@ They should match what was shown on your exemption or prepayment certificate, or
                 <div class="nhsuk-checkboxes__item">
                   <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message" required>
                   <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
-                   <strong> I confirm all my personal details are correct</strong>
+                   <strong>I confirm that the details on the prescription are correct</strong>
                   </label>
                 </div>
         
