--- a/app/views/v5-enquiry/update-name-dwp.html
+++ b/app/views/v5-enquiry/update-name-dwp.html
@@ -42,7 +42,7 @@
       <form action="check-personal-details-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>How was your name written on your [Benefit]?</h1>
+        <h1 class="nhsuk-heading-l">How was your name written on your [Benefit]?</h1>
         <form action="v22/name" method="post">
 
           <div class="nhsuk-form-group">
@@ -65,6 +65,7 @@
         <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
           Continue
         </button>
+        <p class="navigation"><a class="cancel" href="respond-to-your-letter">Cancel</a></p>
        </form>
 
     </div>
