--- a/app/views/v5-enquiry/what-is-your-email.html
+++ b/app/views/v5-enquiry/what-is-your-email.html
@@ -39,7 +39,7 @@
       <a href="check-email-details" class="nhsuk-button">
         Continue
        </a>
-        <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
+        <p class="navigation"><a class="cancel" href="respond-to-your-letter">Cancel</a></p>
        </form>
 
     </div>
