Baseline enquiry letter journey finished

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -163,6 +163,47 @@ NHS.UK prototype kit
         </span>
       </summary>
       <div class="nhsuk-details__text">
+
+        <h3>Verification pages</h3>
+
+
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tbody class="nhsuk-table__body">
+              <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">Were you claiming - DWP</td>
+                <td class="nhsuk-table__cell "><a href="v5-enquiry/were-you-claiming-any-benefits-decs">Were you claiming or named on a DWP benefit</a></td>
+                <td class="nhsuk-table__cell"></strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--green">
+                  DECS
+                </strong></td>
+              </tr>
+
+              <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">Were you claiming - BSA</td>
+                <td class="nhsuk-table__cell "><a href="v5-enquiry/did-you-have-an-exemption-decs">Were you claiming or named on a BSA benefit</a></td>
+                <td class="nhsuk-table__cell"></strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--green">
+                  DECS
+                </strong></td>
+              </tr>
+  
+            </tbody>
+
+          </tbody>
+        </table>
         <h3>Kickout pages</h3>
 
 
